Fix padding on mobile

--- a/css/misc.scss
+++ b/css/misc.scss
@@ -92,4 +92,7 @@ ul.posts {
         font-size: 18px;
     }
     
+    .bloghead {
+        padding: 20px;
+    }
 }
